--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Riesgo del inversionista</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <script src="./js/main.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/code.js"></script>
 </head>
 <body>
     <div id="wrapper">
@@ -86,75 +86,75 @@
             <tbody>
                 <tr>
                     <th>Intrumentos de deuda(Bonos de deuda emitios por empresas comerciales o por entidades gubernamentales. Ejemplo: Cetes)</th>
-                    <td>Fila 1 Columna 1</td>
-                    <td>Fila 1 Columna 2</td>
-                    <td>Fila 1 Columna 3</td>
-                    <td>Fila 1 Columna 4</td>
-                    <td>Fila 1 Columna 5</td>
-                    <td>Fila 1 Columna 6</td>
-                    <td>Fila 1 Columna 7</td>
-                    <td>_______%</td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="number">%</td>
                 </tr>
                 <tr>
                     <th>Acciones/Mercado de capitales</th>
-                    <td>Fila 2 Columna 1</td>
-                    <td>Fila 2 Columna 2</td>
-                    <td>Fila 2 Columna 3</td>
-                    <td>Fila 2 Columna 4</td>
-                    <td>Fila 2 Columna 5</td>
-                    <td>Fila 2 Columna 6</td>
-                    <td>Fila 2 Columna 7</td>
-                    <td>_______%</td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="number">%</td>
                 </tr>
                 <tr>
                     <th>Sociedades de inversion de cobertura</th>
-                    <td>Fila 3 Columna 1</td>
-                    <td>Fila 3 Columna 2</td>
-                    <td>Fila 3 Columna 3</td>
-                    <td>Fila 3 Columna 4</td>
-                    <td>Fila 3 Columna 5</td>
-                    <td>Fila 3 Columna 6</td>
-                    <td>Fila 3 Columna 7</td>
-                    <td>_______%</td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="number">%</td>
                 </tr>
                 <tr>
                     <th>Socieades e inversion de deuda/renta fija</th>
-                    <td>Fila 4 Columna 1</td>
-                    <td>Fila 4 Columna 2</td>
-                    <td>Fila 4 Columna 3</td>
-                    <td>Fila 4 Columna 4</td>
-                    <td>Fila 4 Columna 5</td>
-                    <td>Fila 4 Columna 6</td>
-                    <td>Fila 4 Columna 7</td>
-                    <td>_______%</td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="number">%</td>
                 </tr>
                 <tr>
                     <th>Socieades de inversión de renta variable</th>
-                    <td>Fila 5 Columna 1</td>
-                    <td>Fila 5 Columna 2</td>
-                    <td>Fila 5 Columna 3</td>
-                    <td>Fila 5 Columna 4</td>
-                    <td>Fila 5 Columna 5</td>
-                    <td>Fila 5 Columna 6</td>
-                    <td>Fila 5 Columna 7</td>
-                    <td>_______%</td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="number">%</td>
                 </tr>
                 <tr>
                     <th>Derivados(Instrumentos de cobertura para divisas, tasas y otras variables economicas que permiten la reduccion de riesgos por moviemientos inesperados del mercado, los mas comunes osn los futuros y las opciones</th>
-                    <td>Fila 6 Columna 1</td>
-                    <td>Fila 6 Columna 2</td>
-                    <td>Fila 6 Columna 3</td>
-                    <td>Fila 6 Columna 4</td>
-                    <td>Fila 6 Columna 5</td>
-                    <td>Fila 6 Columna 6</td>
-                    <td>Fila 6 Columna 7</td>
-                    <td>_______%</td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="number">%</td>
                 </tr>
                 <tfoot>
                     <tr>
                         <td colspan="1">Efectivo, cuenta de cheques y ahorro(instrumentos a la vista o de liquidez inmeiata)</td>
                         <td colspan="7">Solo incluir el porcentaje de inversión<br>Total</td>
-                        <td colspan="1">_______%<br>100%</td>
+                        <td colspan="1"><input type="number">%<br>100%</td>
                     </tr>
                 </tfoot>
             </tbody>
@@ -188,64 +188,64 @@
             <tbody>
                 <tr>
                     <th>Intrumentos de deuda(Bonos de deuda emitios por empresas comerciales o por entidades gubernamentales. Ejemplo: Bonos del tesoro,eurobonos)</th>
-                    <td>Fila 1 Columna 1</td>
-                    <td>Fila 1 Columna 2</td>
-                    <td>Fila 1 Columna 3</td>
-                    <td>Fila 1 Columna 4</td>
-                    <td>Fila 1 Columna 5</td>
-                    <td>Fila 1 Columna 6</td>
-                    <td>Fila 1 Columna 7</td>
-                    <td>_______%</td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="number">%</td>
                 </tr>
                 <tr>
                     <th>Acciones/Mercado de capitales(Acciones listadas en bolsas internacionales. Ejemplo: Coca Cola, Disney, Intel, etc.) </th>
-                    <td>Fila 2 Columna 1</td>
-                    <td>Fila 2 Columna 2</td>
-                    <td>Fila 2 Columna 3</td>
-                    <td>Fila 2 Columna 4</td>
-                    <td>Fila 2 Columna 5</td>
-                    <td>Fila 2 Columna 6</td>
-                    <td>Fila 2 Columna 7</td>
-                    <td>_______%</td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="number">%</td>
                 </tr>
                 <tr>
                     <th>Sociedades de inversion de deuda/renta fija(sociedades de inverión que invierten en instrumentos de deuda)</th>
-                    <td>Fila 3 Columna 1</td>
-                    <td>Fila 3 Columna 2</td>
-                    <td>Fila 3 Columna 3</td>
-                    <td>Fila 3 Columna 4</td>
-                    <td>Fila 3 Columna 5</td>
-                    <td>Fila 3 Columna 6</td>
-                    <td>Fila 3 Columna 7</td>
-                    <td>_______%</td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="number">%</td>
                 </tr>
                 <tr>
                     <th>Socieades de inversion de renta variable(Sociedades de inversion que invierten en acciones)</th>
-                    <td>Fila 4 Columna 1</td>
-                    <td>Fila 4 Columna 2</td>
-                    <td>Fila 4 Columna 3</td>
-                    <td>Fila 4 Columna 4</td>
-                    <td>Fila 4 Columna 5</td>
-                    <td>Fila 4 Columna 6</td>
-                    <td>Fila 4 Columna 7</td>
-                    <td>_______%</td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="number">%</td>
                 </tr>
                 <tr>
                     <th>Derivados(Instrumentos de cobertura para divisas, tasas yy otras variables económicas que permiten la reducción de riesgos por movimientos inesperados del mercado, los mas comunes on los futuros y las opciones)</th>
-                    <td>Fila 5 Columna 1</td>
-                    <td>Fila 5 Columna 2</td>
-                    <td>Fila 5 Columna 3</td>
-                    <td>Fila 5 Columna 4</td>
-                    <td>Fila 5 Columna 5</td>
-                    <td>Fila 5 Columna 6</td>
-                    <td>Fila 5 Columna 7</td>
-                    <td>_______%</td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="checkbox"></td>
+                    <td><input type="number">%</td>
                 </tr>
                 <tfoot>
                     <tr>
                         <td colspan="1">Efectivo, cuenta de cheques y ahorro(instrumentos a la vista o de liquidez inmeiata)</td>
                         <td colspan="7">Solo incluir el porcentaje de inversión<br>Total</td>
-                        <td colspan="1">_______%<br>100%</td>
+                        <td colspan="1"><input type="number">%<br>100%</td>
                     </tr>
                 </tfoot>
             </tbody>
@@ -331,7 +331,7 @@
             <p>
                 <input type="checkbox" value="4">e)No tengo preferencia por una moneda en particular
             </p>
-        <h3>12.De acuerdo a la definición anterior ¿se considera como un inversionista sofisticado?</h3>
+        <h3>12.De acuerdo a la definición del inversionista de inversionista sofisticado ¿se considera como un inversionista sofisticado?</h3>
             <p>
                 <input type="checkbox" name="q12" value="2">a)Sí
             </p>
