--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </p>
             <br>
         <table border="1" style=”width: 100%”>
-            <caption><h3>5.¿Conoce alguna de las siguientes opciones de inversión?</h3>A) opciones de inversion en el mercado nacional</caption>
+            <caption><h3>5.¿Conoce alguna de las siguientes opciones de inversión?</h3><input type="checkbox" value="2">A) opciones de inversion en el mercado nacional</caption>
             <colgroup>
                 <col style="width: 20%"/>
                 <col style="width: 40%"/>
@@ -160,7 +160,7 @@
             </tbody>
         </table>
         <table border="1" style=”width: 100%”>
-            <caption>B) Opciones de inversion en el mercado internacional</caption>
+            <caption><input type="checkbox" value="3">B) Opciones de inversion en el mercado internacional</caption>
             <colgroup>
                 <col style="width: 20%"/>
                 <col style="width: 40%"/>
@@ -250,6 +250,9 @@
                 </tfoot>
             </tbody>
         </table>
+        <p>
+            <input type="checkbox" value="1">c)No conozco ninguna
+        </p>
         <h3>6.¿Utiliza medios propios para evaluar y dar seguimiento a instrumentos financieros y a mercados bursátiles?</h3>
             <p>
                 <input type="checkbox" value="2">a)Sí (Cuáles: <input type="text">)
